# esp32_binary_clock

./: Cargo.toml  README.md
.cargo/: config.toml
src/: button.rs  display.rs  main.rs  time.rs  time_sync.rs  ui.rs  ui_arc.rs  ui_bcd.rs
