[package]
name = "binary-clock"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "1.1.1", features = ["esp32c6", "unstable"] }
esp-backtrace = { version = "0.19.0", features = ["esp32c6", "panic-handler", "println"] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6"] }

embedded-graphics = "0.8.2"
embedded-io = "0.7.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"

mipidsi = "0.10.0"
display-interface-spi = "0.5.0"
heapless = "0.8.0"
static_cell = "2.1.1"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
lto = 'fat'
codegen-units = 1
panic = 'abort'
