[package]
name = "binary-clock"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "1.1.1", features = ["esp32c6", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["esp32c6", "embassy", "esp-radio"] }
esp-backtrace = { version = "0.19.0", features = ["esp32c6", "panic-handler", "println"] }
esp-println = { version = "0.17.0", default-features = false, features = ["esp32c6"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6"] }
esp-radio = { version = "0.18.0", features = ["esp32c6", "wifi"] }
esp-alloc = "0.10.0"

embedded-graphics = "0.8.2"
embedded-graphics-framebuf = "0.5.0"
embedded-io = "0.7.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"

display-interface-spi = "0.5.0"
heapless = "0.8.0"
mipidsi = "0.10.0"
reqwless = { version = "0.14", default-features = false }
sntpc = { version = "0.10.0", default-features = false }
sntpc-net-embassy = "0.10.0"
sntpc-time-embassy = "0.5.0"
static_cell = "2.1.1"


embassy-executor = "0.10.0"
embassy-time = "0.5.1"
embassy-sync = "0.8.0"
embassy-net = { version = "0.9.1", features = ["proto-ipv4", "udp", "tcp", "dhcpv4", "dns", "medium-ethernet"] }

[features]
default = ["esp-println/no-op"]
logging = ["esp-println/log-04", "esp-println/auto"]


[profile.release]
opt-level = "s"
lto = 'fat'
codegen-units = 1
panic = 'abort'
